
pandoc-eqnos 0.7.2 (2016-01-22)

    * Fixed AttributeError bug that occurred for links
      emphasized [*like this*](http://example.com/).
    * Fixed TypeError for pandoc < 1.16 when autolink_bare_uris is
      used.


pandoc-eqnos 0.7.1 (2016-01-13)

    * Fixed TypeError bug that occurred with pandoc < 1.16 (Issue #7).
      This bug was inadvertently introduced with pandoc-eqnos 0.7.


pandoc-eqnos 0.7 (2016-01-11)

    * Fixed problems when pandoc's autolink_bare_uris is used.


pandoc-eqnos 0.6 (2016-01-01)

    * Flush stdout before exiting (Issue #4).


pandoc-eqnos 0.5 (2015-12-30)

    * Fixed curly-brace persistence for references in lists.
    * Fixed equation label problem in lists (Issue #5).


pandoc-eqnos 0.4 (2015-07-17)

    * Construct links for html.
    * Changed demo.md to use dollar signs (Issue #2).


pandoc-eqnos 0.3 (2015-07-15)

    * Enforce pandoc's requirement of UTF-8.


pandoc-eqnos 0.2.2 (2015-06-07)

    * Added README.md and LICENSE to MANIFEST.in so that they
      get distributed via pip.


pandoc-eqnos 0.2.1 (2015-06-03)

    * Included missing install dependency in MANIFEST.in.
    * Updated documentation.


pandoc-eqnos 0.2 (2015-06-01)

    * Made release available through pypi.


pandoc-eqnos 0.1 (2015-03-14)

    * initial release
