@@ -1,0 +1,16 @@
+
+$$ y = f(x) $$ {#eq:1}
+
+$$ y = g(x) $$ {#eq:2}
+
+Equations {@eq:1} and @eq:2, eqs. {@eq:1}-{@eq:3} and eqs. {@eq:1}-{@eq:2}-{@eq:3}.
+
+Equations and references in lists:
+
+  * Equation 3:
+    $$ y = h(x) $$ {#eq:3}
+  * Equations {@eq:1} and @eq:2, eqs. {@eq:1}-{@eq:3} and 
+    eqs. {@eq:1}-{@eq:2}-{@eq:3}.
+
+A [Regular link](http://example.com/), an [*italicized link*](http://example.com/) and an email.address@mailinator.com.
+
